--- a/lds/public/stylesheets/style.css
+++ b/lds/public/stylesheets/style.css
@@ -1,8 +1,14 @@
 body {
   padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  //font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
 a {
   color: #00B7FF;
+}
+
+.btn {
+  margin-left: 10pt;
+  margin-right: 10pt;
+  display: inline;
 }
